woost/views/resources/styles/blocks.css
.TextBlockView {
    overflow: hidden;
}

.TextBlockView > .block_link {
    display: block;
}

.TextBlockView .image_gallery .image_entry {
    margin: 0;
    margin-right: 1em;
    margin-bottom: 1em;
}

/* Top left */
.TextBlockView.top_left .image_gallery .image_entry,
.TextBlockView.top_right .image_gallery .image_entry {
    display: inline-block;
    vertical-align: top;
}

.TextBlockView.top_left .image_gallery .image_entry > a {
    text-align: left;
}

/* Top right */
.TextBlockView.top_right .image_gallery .image_entry > a {
    text-align: right;
}

/* Float top left */
.TextBlockView.float_top_left .image_gallery {
    float: left;
}

/* Float top right */
.TextBlockView.float_top_right .image_gallery {
    float: right;
}

.TextBlockView.float_top_right .image_gallery .image_entry {
    margin-right: 0;
    margin-left: 1em;
}

/* Column (both left and right) */
.TextBlockView .columns_wrapper {
    display: table-row;
}

.TextBlockView .columns_wrapper .image_gallery,
.TextBlockView .columns_wrapper .text_container {
    display: table-cell;
    vertical-align: top;
}

/* Center top */
.TextBlockView.center_top .image_gallery {
    text-align: center;
}

.TextBlockView.center_top .image_gallery > ul {
    display: inline-block;
}

